feat: complete migration from Python to Go - 重写整个项目：Python/Tkinter → Go/tview TUI - 新的项目结构：cmd/, internal/ 模块化组织 - 直接使用 Go MySQL 驱动替代系统 mysql 命令行封装 - 添加 Go module 配置：go.mod, go.sum, Makefile - 更新文档：AGENTS.md, README.md 适配 Go 开发流程 - 更新 Docker 构建环境：golang:1.25-alpine - 新增功能：终端UI、连接配置、SQL查询、CSV导出

--- a/Dockerfile.linux-build
+++ b/Dockerfile.linux-build
@@ -1,21 +1,7 @@
-FROM ubuntu:22.04
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-      bash \
-      ca-certificates \
-      python3 \
-      python3-venv \
-      python3-pip \
-      python3-tk \
-      upx-ucl \
-    && rm -rf /var/lib/apt/lists/*
+FROM golang:1.25-alpine
 
 WORKDIR /src
 COPY . /src
 
 # Default: build onedir output to /out/mysql-client-gui/
-CMD ["bash", "-lc", "PYTHON_BIN=python3 DIST_DIR=/out scripts/build-linux-onedir.sh"]
-
+CMD ["bash", "-lc", "DIST_DIR=/out scripts/build-linux-onedir.sh"]
