docs: update development guidelines and Docker configuration - 重构AGENTS.md：更新构建命令、代码风格、安全规范 - 替换Docker构建配置：删除linux-build，添加新Dockerfile - 优化项目结构说明和开发工作流

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
-__pycache__/
-*.py[cod]
-.Python
-.venv/
-venv/
-dist/
-build/
-*.egg-info/
-.DS_Store
-.venv-build/
+# Go build outputs
+output/
+bin/
 .cache/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Log files
+*.log
